[tool.poetry]
name = "gitMonkey"
version = "0.1.0"
description = ""
authors = ["elDante <dantethescrub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.1"
fake_useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
